--- a/README
+++ b/README
@@ -52,7 +52,8 @@ Shrike (http://malkier.net) - Some design concepts
 --------------
 
 Chakora Services are modular IRC Services coded in Perl for the InspIRCd 
-1.2, Charybdis and any other IRCd based off it (TS6). It comes with; 
+1.2, Charybdis and any other IRCd based off it (TS6), except those with 
+more than +ov. It comes with; 
 ChanServ, NickServ, OperServ, HostServ, MemoServ and Global.
 
 ATTENTION: By using this software, you are stating
