--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -124,3 +124,5 @@ Current
 	- Modules: memoserv/main: Added memo_send() and memo_del()
 	- API: added gen_sid
 	- Chakora: Module autoload moved to modules.conf with a new format. Example config: modules.conf.example
+	- Protocols: Mode trackers
+	- API: added event_ctcp 
