--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -10,6 +10,8 @@
 Current Devel
 	- HostServ: Update hostserv/main to match the updated API.
 	- Config/Modules: nickserv/register now allows you to set a maximum number of accounts an email can be associated with and enforces it.
+	- Modules: Finished nickserv/drop
+
 1.0.0-alpha1
 	- InspIRCd: Join after the ircd is done bursting to us
 	- InspIRCd: Store TS
