--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -12,6 +12,7 @@ Current Devel
 	- Config/Modules: nickserv/register now allows you to set a maximum number of accounts an email can be associated with and enforces it.
 	- Modules: Finished nickserv/drop
 	- Chakora: Made soper.conf for services oper powers.
+	- Modules: nickserv/info: Added support to provide last real host to sopers with nickserv:fullinfo
 
 1.0.0-alpha1
 	- InspIRCd: Join after the ircd is done bursting to us
