--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -15,6 +15,7 @@ Current Devel
 	- Modules: nickserv/info: Added support to provide last real host to sopers with nickserv:fullinfo
 	- Modules: Added chanserv/mute
 	- Modules: Added chanserv/clear
+	- Modules: Added operserv/raw
 
 1.0.0-alpha1
 	- InspIRCd: Join after the ircd is done bursting to us
