--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -22,6 +22,7 @@ Current Devel
 	- API: Moved services-related subs to src/API/Services.pm.
 	- Modules: Added operserv/restart for performing a more clean services restart.
 	- NickServ: Re-identify users when possible after restarting.
+	- Protocols: Update the accountname in memory when changing the accountname on the IRCd.
 
 1.0.0-alpha1
 	- InspIRCd: Join after the ircd is done bursting to us
