Added a note to contrib README's that didn't already have it.

--- a/contrib/mattwb65/README
+++ b/contrib/mattwb65/README
@@ -4,3 +4,5 @@ Welcome to my README where I say random things.
 - os_userlog is fucked
 - cs_away and cs_lol are example modules
 - I will add more modules later
+
+NOTE: THE MODULES IN THIS CONTRIBUTION SECTION ARE NOT OFFICIALLY SUPPORTED BY CHAKORA.
