--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -18,6 +18,9 @@ Current Devel
 	- Protocol - Charybdis: Added handling for MLOCK
 	- API: added serv_global when a particular service need to send a global, send_global should be used for network announcements
 	- Modules: added chanserv/kick
+	- Modules: added chanserv/ban
+	- Modules: added chanserv/kickban
+	- Protocols: Basic InspIRCd2.0 Protocol Added
 
 1.0.0-alpha2
 	- HostServ: Update hostserv/main to match the updated API.
