Updated README & BugFix

--- a/contrib/russellb28/utilserv/README
+++ b/contrib/russellb28/utilserv/README
@@ -52,6 +52,8 @@ nothing is gonna work otherwise! Next do the following:
 * ADD THE FOLLOWING LINES:
 				load "utilserv/main";
 				load "utilserv/dns";
+				load "utilserv/time";
+				load "utilserv/help";
 
 
 3. MODULE INFORMATION
