--- a/contrib/alyx/README
+++ b/contrib/alyx/README
@@ -1,1 +1,13 @@
-NOTE: THE MODULES IN THIS CONTRIBUTION SECTION ARE NOT OFFICIALLY SUPPORTED BY CHAKORA.
+  ___  _   _    _    ___ 
+ / _ \| | | |  / \  |_ _|
+| | | | |_| | / _ \  | | 
+| |_| |  _  |/ ___ \ | | 
+ \___/|_| |_/_/   \_\___|
+                        
+
+Note: These modules are not supported by Chakora.
+        For assistance with the modules in this
+        folder, please ask in #helix on
+        irc.woomoo.org. Thank you. :)
+
+                            - alyx
