--- a/docs/TODO
+++ b/docs/TODO
@@ -10,8 +10,8 @@
 [X] Global
 	[X] send_global sub (Use a foreach statement for %uid's to send a NOTICE to each user? --Matthew)
 [ ] NickServ
-	[!] Make the nickserv core a module.
-		[ ] Add sub's relating to nickserv into nickserv/main
+	[X] Make the nickserv core a module.
+		[O] Add sub's relating to nickserv into nickserv/main (These go in API/Services.pm)
 	[X] Register
 		[X] Check for valid a valid email address
 		[X] Set default nickserv flags
@@ -19,9 +19,9 @@
 	[ ] Group
 	[X] Identify
 	[X] Drop
-	[X] Enforce
+	[!] Enforce (We still need a timer...)
 	[!] Set
-		[X] Set email, password, hidemail, enforce
+		[X] Set email, password, hidemail, enforce, noexpire, nostatus
 		[ ] Set API
 	[X] Ghost
 	[ ] Release
@@ -50,6 +50,7 @@
 		[X] Fantasy
 		[X] Description
 		[X] URL
+		[X] Noexpire
 	[!] Access list system (We're going to do a flag system with an XOP adapter)	
 [ ] MemoServ
 	[X] Make the memoserv core a module
@@ -88,7 +89,8 @@
 	[X] Improve CTCP handling (make add_ctcp_handler and del_ctcp_handler perhaps?) - Made it an event
 	[O] Add is_oper
 [ ] Protocols
-	[ ] InspIRCd: Track CHGIDENT and make an event for it
+	[X] InspIRCd: Track CHGIDENT and make an event for it
+	[X] Network ban API sub
 	[ ] Track bans/mutes
 	[X] Add serv_kill
 	[X] Add serv_enforce
