--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -27,7 +27,7 @@ Current Devel
 	- Protocol - InspIRCd(12|20): Added tracking for module load/unloads.
 	- Chakora: Deleted $Chakora::LINKD as sidInfo provides this data.
 	- Modules: Added operserv/modreload for reloading modules.
-	- Protocols: If a server spltis, delete all servers that it acts hub to, along with their users.
+	- Protocols: If a server splits, delete all servers that it acts hub to, along with their users.
 	- API: Added event_chgident() and event_chghost()
 	- operserv/modunload: Unload all modules of that service if the main module is unloaded.
 	- API: Added fantasy() for enabling fantasy on a ChanServ command.
