--- a/docs/TODO
+++ b/docs/TODO
@@ -61,13 +61,13 @@
 	[ ] Delete
 [ ] OperServ
 	[O] Make the operserv core a module
-	[!] Don't allow OperServ to be kicked/killed/etc (Add the reconnection stuff in raw_ subs? --Matthew)
+	[X] Don't allow OperServ to be kicked/killed/etc. (Add the reconnection stuff in raw_ subs? --Matthew)
 	[X] Restart
 	[X] Shutdown
 	[ ] Rehash (Config::Scoped doesn't allow this, we need our own config parser --Matthew)
 	[X] Module management (list, load, unload) [list done, somethings wrong with load and unload - perhaps module_exists is bugged --Matthew] 
-	[ ] Make modload, modunload and protocols - unloadable
-	[ ] Improve the error messages in modload, if the file doesn't exist say that.
+	[ ] Make modload, modunload and protocols - unloadable ( protocols don't have a void/init handler, regardless, let it be known it's not unloadable --Matthew)
+ 	[ ] Improve the error messages in modload, if the file doesn't exist say that.
 	[X] The protocols need to be a module (Add $Chakora::MODULE{name} $Chakora::MODULE{author} and $Chakora::MODULE{version} to the top of the protocol --Matthew)
 	[ ] AKill
 	[ ] Jupe
