--- a/README
+++ b/README
@@ -35,7 +35,7 @@ Team, a team managed by TechnoDevs.
 
 Elijah "starcoder" Perrault   - Head Developer      || iElijah101
 Matthew "MattB" Barksdale     - Co-Head Developer   || mattwb65
-Chazz Wolcott                 - Developer           || alyx
+Alexandria "alyx" Wolcott     - Developer           || alyx
 Russell Bradford              - Developer           || RussellB28
 Niall Davies                  - Developer           || NiallDavies
 Clay "Freelancer" Freeman     - Contributor         || ClayFreeman
