Added Developer: Dark_Aaron

--- a/README
+++ b/README
@@ -39,6 +39,7 @@ Matthew "MattB" Barksdale     - Co-Head Developer   || mattwb65
 Alexandria "alyx" Wolcott     - Developer           || alyx
 Russell Bradford              - Developer           || RussellB28
 Niall Davies                  - Developer           || NiallDavies
+Aaron "Dark_Aaron" Blakely    - Developer	    || ablakely
 
 If you are interested in becoming a developer for Chakora,
 please contact Elijah at elijah@technoirc.org
