--- a/docs/TODO
+++ b/docs/TODO
@@ -120,6 +120,7 @@
 	[ ] A server doesn't need to exist to add a jupe, but we still need to check if a server that is trying to be juped exists. Fix the $ssid in the protocols to do this.
 	[X] InspIRCd: Handle remote servers trying to set a users accountname like Charybdis
 	[ ] Add handling for ADDLINE (InspIRCd) and BAN (Charybdis)
+	[ ] When a service is unloaded, unload all modules that are associated with it
 
 [ ] Docs
 	[X] Add docs for the module api
