--- a/README
+++ b/README
@@ -31,9 +31,9 @@ You should have the following before contacting us on this:
 1. CREDITS
 ----------
 
-Chakora is developed by The Chakora Project Development
-Team, a team managed by TechnoDevs.
-
+Franklin IRC Services are developed by The Franklin IRC Services Team
+Team, a team managed by FranklinDevs.
+==Chakora Coders==
 Elijah "starcoder" Perrault   - Head Developer      || iElijah101
 Matthew "MattB" Barksdale     - Co-Head Developer   || mattwb65
 Alexandria "alyx" Wolcott     - Developer           || alyx
@@ -41,18 +41,22 @@ Russell Bradford              - Developer           || RussellB28
 Niall Davies                  - Developer           || NiallDavies
 Aaron "Dark_Aaron" Blakely    - Developer	    || ablakely
 
-If you are interested in becoming a developer for Chakora,
-please contact Elijah at elijah@technoirc.org
+==Franklin IRC Services==
+Matthew "Franklin" Burket - Head Developer          || Mab879
+
+If you are interested in becoming a developer for Franklin IRC Services,
+please contact Elijah at Matthew@assignitapp.com.
 
 Other Credits:
 
-Atheme (http://atheme.net)  - Many design concepts
-Shrike (http://malkier.net) - Some design concepts
+Atheme (http://atheme.net)  	- Many design concepts
+Shrike (http://malkier.net) 	- Some design concepts
+Chakora (http//:Chakora.net) 	- The orgianl source code
 
 2. DESCRIPTION
 --------------
 
-Chakora Services are modular IRC Services coded in Perl for the InspIRCd 
+Franklin IRC Services are modular IRC Services coded in Perl for the InspIRCd 
 1.2, Charybdis and any other IRCd based off it (TS6), except those with 
 more than +ov. NOTE: ircd-ratbox support is available - you must set use_ts6 to yes though. It comes with; 
 ChanServ, NickServ, OperServ, HostServ, MemoServ and Global.
@@ -68,12 +72,12 @@ See docs/INSTALLATION
 4. GETTING SUPPORT
 ------------------
 
-Should you need any help with Chakora, please drop by
+Should you need any help with Franklin IRC Services, please drop by
 our IRC chatroom:
 
 Host: irc.technoirc.net
 Port: 6667 | SSL: 6697
-Channel: #Chakora
+Channel: #FranklinIRCServices
 
 If you need help with the module API, we have included
 a manual.
@@ -86,7 +90,7 @@ a manual.
 In the case that you come across a bug in the main source
 code, you should report it to us immediately.
 
-Please visit http://bugs.chakora.net to report a bug, and
+Please add them to our issue tracker at  https://github.com/Mab879/Chakora-botserv/issues
 we'd also recommend ensuring it hasn't been fixed or maybe
 isn't a bug by visiting our IRC chatroom.
 
