I need to learn how to type a url.

--- a/README
+++ b/README
@@ -51,7 +51,7 @@ Other Credits:
 
 Atheme (http://atheme.net)  	- Many design concepts
 Shrike (http://malkier.net) 	- Some design concepts
-Chakora (http//:Chakora.net) 	- The orgianl source code
+Chakora (http://Chakora.net) 	- The orgianl source code
 
 2. DESCRIPTION
 --------------
